--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <spring.version>5.2.7.RELEASE</spring.version>
     <hibernate.version>5.4.15.Final</hibernate.version>
     <hibernate.validator.version>6.1.5.Final</hibernate.validator.version>
+    <spring.data.version>2.3.0.RELEASE</spring.data.version>
   </properties>
 
   <dependencies>
@@ -45,6 +46,19 @@
       <version>42.2.14</version>
     </dependency>
 
+    <!-- SPRING DATA -->
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-jpa</artifactId>
+      <version>${spring.data.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.data</groupId>
+      <artifactId>spring-data-commons</artifactId>
+      <version>${spring.data.version}</version>
+    </dependency>
+
+    <!-- SPRING CORE / CONTEXT -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -61,6 +75,7 @@
       <version>${spring.version}</version>
       <scope>test</scope>
     </dependency>
+    <!-- SPRING ORM -->
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
@@ -77,6 +92,7 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    <!-- TEST -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
