--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
     <hibernate.version>5.4.15.Final</hibernate.version>
     <hibernate.validator.version>6.1.5.Final</hibernate.validator.version>
     <spring.data.version>2.3.0.RELEASE</spring.data.version>
+    <spring.security.version>5.3.1.RELEASE</spring.security.version>
   </properties>
 
   <dependencies>
@@ -99,6 +100,24 @@
       <artifactId>spring-webmvc</artifactId>
       <version>${spring.version}</version>
     </dependency>
+
+    <!-- SECURITY -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-core</artifactId>
+      <version>${spring.security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${spring.security.version}</version>
+    </dependency>
+
     <!-- TEST -->
     <dependency>
       <groupId>junit</groupId>
@@ -107,7 +126,7 @@
       <scope>test</scope>
     </dependency>
 
-    <!-- ORM -->
+    <!-- ORM / VALIDATOR -->
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
@@ -133,8 +152,6 @@
       <artifactId>validation-api</artifactId>
       <version>2.0.1.Final</version>
     </dependency>
-
-
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
@@ -146,6 +163,7 @@
       <version>3.0.3</version>
     </dependency>
 
+    <!-- LOGGING -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
@@ -162,6 +180,7 @@
       <version>2.13.3</version>
     </dependency>
 
+    <!-- JSON -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
@@ -183,14 +202,19 @@
       <version>2.11.1</version>
     </dependency>
 
-
+    <!-- XML -->
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>2.3.1</version>
     </dependency>
 
-
+    <!-- MAPPER -->
+    <dependency>
+      <groupId>org.modelmapper</groupId>
+      <artifactId>modelmapper</artifactId>
+      <version>2.3.8</version>
+    </dependency>
   </dependencies>
 
   <build>
