--- a/pom.xml
+++ b/pom.xml
@@ -201,6 +201,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.11.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-xml</artifactId>
+      <version>2.11.1</version>
+    </dependency>
 
     <!-- XML -->
     <dependency>
@@ -214,6 +219,13 @@
       <groupId>org.modelmapper</groupId>
       <artifactId>modelmapper</artifactId>
       <version>2.3.8</version>
+    </dependency>
+
+    <!-- JSON WEB TOKEN -->
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt</artifactId>
+      <version>0.9.1</version>
     </dependency>
   </dependencies>
 
